# Mimir

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  current-plan.md  rust-toolchain.toml
.claude/docs/: architectural_patterns.md
.github/workflows/: ci.yml
crates/mimir-ast/: Cargo.toml
crates/mimir-ast/src/: lib.rs  types.rs
crates/mimir-core/: Cargo.toml
crates/mimir-core/src/: debug_timer.rs  document.rs  lib.rs  logging.rs
crates/mimir-server/: Cargo.toml
crates/mimir-server/src/: ast_features.rs  backend.rs  chain_resolve.rs  code_lens.rs  completion_score.rs  diag_policy.rs  diagnostics.rs  elaborate_service.rs  filelist.rs  format.rs  hierarchy_features.rs  hover_features.rs  includes.rs  lsp_convert.rs  main.rs  member_features.rs  parse_provider.rs  paths.rs  project.rs  references_features.rs  slang_adapter.rs  slang_service.rs  syntax_service.rs  workspace_index.rs  workspace_symbols.rs
crates/mimir-slang/: Cargo.toml
crates/mimir-slang/src/: client.rs  lib.rs  protocol.rs
crates/mimir-syntax/: Cargo.toml
crates/mimir-syntax/src/: builtin_methods.rs  calls.rs  diagnostics.rs  folding.rs  hover_format.rs  inlay.rs  keywords.rs  lib.rs  parser.rs  selection.rs  semantic_tokens.rs  signature.rs  symbols.rs  uvm.rs
crates/mimir-syntax/tests/: semantic_tokens.rs
docs/: code-review-2026-06.md  formatter.md
editors/emacs/: README.md  init.el
editors/vscode/: .npmrc  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: systemverilog.tmLanguage.json
slang-sidecar/: CMakeLists.txt
slang-sidecar/src/: main.cpp
tests/: lsp_client.py  test_apb_cross_file.py  test_apb_monitor.py  test_code_lens.py  test_completion_retrigger.py  test_elaborate_cache.py  test_hello_world.py  test_hierarchy.py  test_interfaces.py  test_macro_expand.py  test_riscv_dv.py  test_selection_and_links.py  test_stress.py  test_uvm_lint.py
