[package]
name         = "mimir-ast"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Backend-agnostic AST types for the Mimir SystemVerilog language server."

[lints.rust]
missing_docs = "warn"

[dependencies]
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
